# Lightning-AI--litserve

./: acceptance.md  goal.md  progress.md  pyproject.toml  todo.md
src/aiserver/: __init__.py  api.py  callbacks.py  devices.py  server.py
tests/: test_api.py  test_batching.py  test_callbacks.py  test_devices.py  test_server.py  test_streaming.py
