[project]
name = "aiserver"
version = "0.1.0"
description = "High-performance AI model serving library"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiserver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --color=yes"
